--- a/classy/templates/classy/jobs.html
+++ b/classy/templates/classy/jobs.html
@@ -79,6 +79,6 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
 
 <script type="text/javascript" src="{% static 'classy/js/bootstrap-uploadprogress.js' %}"></script>
-<script>$('#uploadform').uploadprogress({redirect_url: '/uploader'});</script>
+<script>$('#uploadform').uploadprogress({redirect_url: 'uploader'});</script>
 </body>
 </html>
