--- a/classy/templates/classy/log_list.html
+++ b/classy/templates/classy/log_list.html
@@ -32,6 +32,7 @@
 		<th>Old Clas.</th>
 		<th>New Clas.</th>
 		<th>User</th>
+		<th>Approver</th>
 		<th>State</th>
 	</tr>
 </thead>
@@ -51,6 +52,7 @@
 		<td>{{tuple.o_classification}}</td>
 		<td>{{tuple.n_classification}}</td>
 		<td>{{tuple.user_id}}</td>
+		<td>{{tuple.approved_by}}</td>
 		<td>{{tuple.state}}</td>
 	</tr>
 	{% endfor %}
