--- a/classy/templates/classy/navbar.html
+++ b/classy/templates/classy/navbar.html
@@ -8,6 +8,7 @@
 		{% if request.user.is_staff %}
 		<a class="nav-item nav-link" href="/review">Review{% if num != 0 %} <span class="badge badge-info">{{num}}</span>{% endif %}</a>
 		<a class="nav-item nav-link" href="/uploader">Upload</a>
+		<a class="nav-item nav-link" href="/exceptions">Exceptions</a>
 		<a class="nav-item nav-link" href="/log_list">Logs</a>
 		<a class="nav-item nav-link" href="/admin">Admin</a>
 		{% endif %}
