--- a/static/classy/css/style.css
+++ b/static/classy/css/style.css
@@ -65,8 +65,8 @@ canvas {
 }
 
 #bootstrapoverride {
-	/*font-family: 'Dosis', sans-serif;*/
-	font-family: 'Roboto', sans-serif;
+	/*font-family: 'Dosis', sans-serif;
+	font-family: 'Roboto', sans-serif;*/
 }
 
 .navbar {
